[project]
name = "ml-template"
version = "0.1.0"
description = "A template for ML projects"
authors = [
    { name = "Yicheng", email = "" }
]
dependencies = [
    "hydra-core>=1.3.2",
    "torch>=2.1.2",
    "torchvision>=0.16.2",
    "torchaudio>=2.1.2",
    "numpy>=1.26.2",
    "pandas>=2.1.4",
    "polars>=0.20.2",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.4",
    "matplotlib>=3.8.2",
]
readme = "README.md"
requires-python = ">= 3.11.6"

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ml_template"]
