[project]
name = "video-diffusion"
version = "0.1.0"
description = "cis6200 project"
authors = [
    { name = "Yicheng", email = "" }
]
dependencies = [
    "hydra-core>=1.3.2",
    "numpy>=1.26.2",
    "pandas>=2.1.4",
    "scipy>=1.11.4",
    "matplotlib>=3.8.2",
    "diffusers>=0.27.2",
    "wandb>=0.16.6",
    "transformers>=4.39.3",
    "accelerate>=0.29.2",
    "fastprogress>=1.0.3",
    "gdown>=5.1.0",
    "torch==2.2.0",
    "torchvision==0.17.0",
    "moviepy>=1.0.3",
    "imageio>=2.34.1",
    "opencv-python>=4.9.0.80",
]
readme = "README.md"
requires-python = ">= 3.11.6"

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ml"]
